# pr-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini  test_adk_simple.py  test_adk_structure.py  test_adk_summaries.py  test_pr_analysis_with_ai.py  test_prebid_analysis.py
.pr_agents_checkpoints/: prebid_Prebid.js_9.24.0.json
config/: README.md  repositories.json  repository_structures.json
config/agent-contexts/: prebid-js-agent.yaml
config/prebid-context/: prebid-js.md  prebid-mobile-android.md  prebid-mobile-ios.md  prebid-server-go.md  prebid-server-java.md
config/repository-knowledge/: prebid-js.yaml  prebid-mobile-android.yaml  prebid-mobile-ios.yaml  prebid-server-go.yaml  prebid-server-java.yaml
config/schema/: repository.schema.json
docs/: README.md  ai-features.md  claude-adk-integration.md
docs/api/: ai-services.md  coordinator.md  extractors.md  fetchers.md  models.md  processors.md
examples/: output_example.py  pr_analysis_example.py
output/: pr1185.md  pr12436.md  pr13638.md  pr4381.md
scripts/: verify_test_prs.py
tests/: README.md  test_accuracy_validator.py  test_ai_enhancements.py  test_config_edge_cases.py  test_config_loader.py  test_integration_tagging_and_config.py  test_knowledge_loader.py  test_markdown_formatter_modules.py  test_module_detectors.py  test_module_extractor.py  test_module_extractor_no_config.py  test_module_processor.py  test_output_formatters.py  test_output_manager_repo_structure.py  test_pr_tagger.py  test_pr_tagging_processor.py  test_rate_limit_manager.py  test_repository_config.py  test_repository_structure_config.py  test_webhook_handler.py  test_yaml_registry.py  utils.py
(+185 files in other folders)
