[project]
name = "pr-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.3.0",
    "lxml>=5.4.0",
    "pydantic>=2.11.7",
    "pygithub>=2.6.1",
    "typing-extensions>=4.14.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
